--- a/configs/official-1124/OLMo2-7B-stage1.yaml
+++ b/configs/official-1124/OLMo2-7B-stage1.yaml
@@ -35,6 +35,13 @@ model:
   init_std: 0.02
   init_cutoff_factor: 3
 
+  # MKM configuration
+  use_mkm: true
+  mkm_type: "multi"
+  mkm_factor1: [1, 1, 1 ]
+  mkm_factor2: [4, 8, 16]
+
+#mkm_substeps: [[0],[0,1]]
 softmax_auxiliary_loss: true
 auxiliary_loss_multiplier: 1e-5
 fused_loss: true
@@ -78,8 +85,8 @@ save_num_unsharded_checkpoints_to_keep: -1
 load_path: null
 
 max_duration: 1ep
-global_train_batch_size: 1024
-device_train_microbatch_size: 2
+global_train_batch_size: 4
+device_train_microbatch_size: 1
 
 precision: amp_bf16
 
