--- a/configs/official-1124/OLMo2-7B-MLP-1x4-stage1.yaml
+++ b/configs/official-1124/OLMo2-7B-MLP-1x4-stage1.yaml
@@ -90,6 +90,12 @@ device_train_microbatch_size: 1
 
 precision: amp_bf16
 
+wandb:
+  project: "llm-kron"
+  entity: "abhijangda-microsoft"
+  log_interval: 1
+  group: "7B-MLP-1x4"
+
 fsdp:
   wrapping_strategy: null #by_block_and_size
   precision: mixed
