--- a/configs/official-1124/OLMo2-7B-MKM-FF-PROJ-1x4-stage1.yaml
+++ b/configs/official-1124/OLMo2-7B-MKM-FF-PROJ-1x4-stage1.yaml
@@ -99,6 +99,7 @@ wandb:
 fsdp:
   wrapping_strategy: null #by_block_and_size
   precision: mixed
+  sharding_strategy: HYBRID_SHARD
 
 max_grad_norm: 1.0
 max_grad_norm_ratio: null
